# ccpfews-app

./: .gitignore  Makefile  README.rst  pyproject.toml
core/blog/: admin.py  urls.py  views.py
core/blog/models/: abstracts.py  blogs.py
core/contacts/: admin.py  forms.py  models.py  urls.py  views.py
core/events/: admin.py  urls.py  views.py
core/events/models/: abstracts.py  events.py
core/jinja2/: base.html
core/jinja2/blog/: blog-details.html  blog.html
core/jinja2/errors/: 400.html  403.html  404.html  500.html  maintenance.html
core/jinja2/event/: event-details.html  events.html
core/jinja2/pages/: about.html  contact.html  index.html  research.html
core/jinja2/partials/: __about.html  __banners.html  __blog.html  __consultation.html  __counter.html  __cta.html  __events.html  __features.html  __footer.html  __header.html  __meta_header.html  __mobile_nav.html  __project.html  __search.html  __service_choices.html  __services.html  __team.html
core/jinja2/project/: project-details.html  projects.html
core/jinja2/team/: team-details.html  team.html
core/media/blog/images/: fair_project_2.jfif  fair_project_6.jfif  (+4 more)
core/media/profiles/: oliver.jfif
core/pages/: urls.py  views.py
core/profiles/: admin.py  apps.py  urls.py  views.py
core/profiles/models/: abstracts.py  profiles.py
core/profiles/utils/: save_to_media_root.py
core/project/: urls.py
core/project/settings/: __init__.py  admin_template_config.py  base.py  general_security.py  production.py  utils_config.py
core/research/: admin.py  apps.py  urls.py  views.py
core/research/models/: abstracts.py  books.py  journals.py  projects.py
core/templates/admin/: index.html
(+40 files in other folders)
