[tool.poetry]
name = "core"
version = "0.1.0"
description = "Center for Cyber-Physical Food, Energy and Water System(CCPFEWS) web application"
authors = ["ccpfews <ccpfew@uj.ac.za>"]
license = "Attribution-NonCommercial-ShareAlike 4.0 International"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^3.0.0"
django = "4.2.17"
dotmap = "^1.3.30"
python-decouple = "^3.8"
django-split-settings = "^1.3.2"
sentry-sdk = {extras = ["django"], version = "^2.19.2"}
jinja2 = "^3.1.4"
django-cleanup = "^9.0.0"
django-cors-headers = "^4.6.0"
coverage = "^7.6.9"
django-autoslug = "^1.9.9"
django-recaptcha = "^4.0.0"
django-import-export = "^4.3.3"
pillow = "^11.0.0"
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"
shortuuid = "^1.0.13"
bx-django-utils = "^84"
django-csp = "^3.8"
django-maintenance-mode = "^0.21.1"
django-auto-logout = "^0.5.1"
django-simple-history = "^3.7.0"
django-unfold = "^0.43.0"
django-pgcrypto = "^3.0.2"
bleach = "^6.2.0"
django-defender = "^0.9.8"
django-prose-editor = {extras = ["sanitize"], version = "^0.9.0"}
django-multiselectfield = "^0.1.13"
twilio = "^9.4.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
werkzeug = "^3.1.3"
model-bakery = "^1.20.0"

[tool.isort]
multi_line_output = 5
line_length = 119


[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
